--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@google/genai": "^0.6.1",
     "motion": "^12.6.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
